1_sem/pwi/projekt/pelnerepo/Projekt/biblioteka.h

typedef struct {
    int liczba_znakow;
    int liczba_liter;
    int liczba_wyrazow;
    int liczba_zdan;
    int liczba_akapitow;
    int liczba_znakow_specjalnych;
    int liczba_cyfr;
    int min_dlugosc_slowa;
    int max_dlugosc_slowa;
    float srednia_dlugosc_slowa;
    float srednia_dlugosc_zdania;
    float zlozonosc_leksykalna;
    int tablica_liter[52];
} TextStats;